# mange-ta-main

./: .gitattributes  .gitignore  .readthedocs.yaml  COMPREHENSIVE_PROJECT_REPORT.md  DOCUMENTATION.md  DOCUMENTATION_INDEX.md  EXPLORATION_SUMMARY.txt  LICENSE  Makefile  README.md  backend-config.yaml  compose-prod-override.yaml  compose.yaml  deploy-back.yaml  deploy-front.yaml  ingress.yaml  metrics_raw.csv  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: auto-upgrade.yaml  backend-ci.yaml  ci.yaml
EDA/: data_cleaning_antoine.ipynb  data_exploration.ipynb
EDA/.ipynb_checkpoints/: data_exploration_paul-checkpoint.ipynb
EDA/data/: RAW_recipes.csv  cleaned_recipes_2025-10-11_18-32.csv
backend/: .coverage  Dockerfile  Makefile  compose-backend-prod-override.yaml  compose-backend.yaml  compose-prod-override.yaml  compose.yaml  pyproject.toml  pytest.ini
backend/service/: container.py  main.py
backend/service/layers/: logger.py
backend/service/layers/api/: mange_ta_main.py
backend/service/layers/application/: data_cleaning.py  data_loading.py  exceptions.py  mange_ta_main.py
backend/service/layers/application/interfaces/: data_loader.py  interface.py
backend/service/layers/domain/: mange_ta_main.py
backend/service/layers/infrastructure/: csv_adapter.py  data_loader.py  types.py
backend/service/layers/infrastructure/data/: interactions.csv  recipes.csv
backend/tests/: conftest.py  test_mange_ta_main.py
docs/: DOCSTRING_EXAMPLES.md  FILES_CREATED.md  GETTING_STARTED.md  Makefile  POUR_LE_PROF.md  QUICKSTART.md  README.md  SUMMARY.md  analytics-review.rst  architecture.rst  conf.py  getting-started.rst  index.rst  make.bat  requirements.txt
docs/api/: backend-api.rst  backend-application.rst  frontend-components.rst  index.rst
docs/source/: api.rst  architecture.rst  conf.py  contributing.rst  index.rst  introduction.rst
docs/source/backend/: index.rst
docs/source/frontend/: index.rst
frontend/: .coverage  Dockerfile  Makefile  README.md  compose-front-prod-override.yaml  compose-front.yaml  compose-prod-override.yaml  compose.yaml  pyproject.toml  pyrightconfig.json  pytest.ini
frontend/frontend/: __init__.py
frontend/service/: app.py  domain.py  logger.py
frontend/service/components/: sidebar.py  tab01_top_contributors.py  tab02_duration_recipe.py  tab03_reviews.py  tab04_rating.py  tab05_personnas.py  tab06_top10_analyse.py  tab07_tags.py
frontend/service/pages/: 00_API_Test.py  00_Raw_Data.py  02_Top_Contributors.py  03_Raw_Data.py  tab01_data.py  tab02_analyse.py  tab02_top_contributors.py  tab03_conclusions.py  tab03_raw_data.py
frontend/service/src/: http_client.py  io_loader.py
frontend/tests/: conftest.py  test_mange-ta-main-front.py  test_mange_ta_main_front.py
service/: main.py
service/layers/api/: mange_ta_main.py
service/layers/domain/: mange_ta_main.py
tests/: conftest.py  test_mange_ta_main.py
