[project]
name = "mange_ta_main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.112.2",
    "structlog>=24.4.0",
    "pandas>=2.3.2",
    "pydantic>=2.11",
    "dependency-injector>=4.41.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.6.2",
    "fastapi-cli>=0.0.5",
    "pytest>=8.2.0",
    "pyright>=1.1.300",
    "uvicorn>=0.23.2",
    "pandas-stubs>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["service"]

[tool.black]
line-length = 100
target-version = ["py311"]
skip-string-normalization = true

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = true
show_error_codes = true
follow_imports = "silent"

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.pyright]
venvPath = "/app"
venv = ".venv"
include = ["service", "tests"]
exclude = ["**/__pycache__", ".venv", "node_modules"]
typeCheckingMode = "basic"
reportMissingTypeStubs = "warning"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownParameterType = "none"
strictParameterNoneValue = true
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryCast = "warning"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
reportDuplicateImport = "warning"