[project]
name = "mange-ta-main-front"
version = "0.1.0"
description = "Application Streamlit pour interagir avec le backend FastAPI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit",
    "requests", 
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["frontend"]

[tool.black]
line-length = 100
target-version = ["py311"]
skip-string-normalization = true

[tool.mypy]
python_version = 3.12
ignore_missing_imports = true
strict = true
show_error_codes = true
follow_imports = "silent"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.2",
    "fastapi-cli>=0.0.5",
    "pytest>=8.2.0",
    "pyright>=1.1.300",
    "uvicorn>=0.23.2",
]

[tool.streamlit]
base = "light"
primaryColor = "#F63366"
backgroundColor = "black"
secondaryBackgroundColor = "#3E3E3E"
textColor = "white"
font = "sans serif"